--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,11 +1,14 @@
-@import "variables";
+@import 'variables';
+@import 'header';
+@import 'hero';
+
 
 body {
-	font-family: "Work Sans", sans-serif;
-	width: 100%;
-	padding: 0 15px;
+	font-family: 'Work Sans', sans-serif;
+	font-weight: 400;
 	font-size: 18px;
 	line-height: 1.2;
+	background-color: $color-light;
 	color: $color-black;
 }
 
@@ -13,77 +16,53 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	overflow-x: hidden;
+
+	max-width: 1430px;
+	padding: 0 15px;
+	width: 100%;
+	margin: 0 auto;
 }
 
 .main {
 	flex-grow: 1;
 }
 
-.container {
-	max-width: 1430px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
-.btn {
-	background-color: $color-accent;
+.button-blue,
+.button-white {
 	font-size: 18px;
 	font-weight: 700;
-	padding: 18px 28px;
-	color: $color-light;
+	padding: 14px 28px;
 	border-radius: 2px;
+	transition: opacity 0.2s ease-in;
 }
 
-// header
-
-.header__inner {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	background-color: $color-beige;
-	padding: 40px 25px 78px 130px;
+.button-blue {
+	background-color: $color-accent;
+	color: $color-light;
 }
 
-.header__logo {
-	display: flex;
-	align-items: center;
-	gap: 15px;
-
-	&-img {
-		width: 70px;
-		height: 60px;
-	}
+.button-white {
+	background-color: $color-light;
+	color: $color-accent;
 }
 
-.header__logo-text {
-	display: flex;
-	flex-direction: column;
-	gap: 6px;
-
-	.header__logo-name {
-		color: $color-black;
-		font-weight: 700;
-		font-size: 20px;
-	}
-
-	.header__logo-description {
-		font-size: 18px;
-	}
+.button-blue:hover,
+.button-white:hover {
+	opacity: 0.8;
 }
 
-.header__nav {
-	.active {
-		font-weight: 700;
-	}
-
-	&-link {
-		color: $color-black;
-	}
-	&-list {
-		display: flex;
-		align-items: center;
-		gap: 50px;
-	}
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	white-space: nowrap;
+	clip-path: inset(100%);
+	clip: rect(0 0 0 0);
+	overflow: hidden;
 }
 
 
