--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
   display: flex;
   justify-content: space-between;
   background-color: #f3c6bd;
-  padding: 40px 25px 78px 130px;
+  padding: 40px 25px 126px 130px;
   position: relative;
 }
 .hero__content {
@@ -96,11 +96,30 @@
   height: 448px;
 }
 
+.about__inner {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+  padding: 76px 130px;
+  background-color: #f4f5f7;
+}
+.about__content {
+  max-width: 555px;
+}
+.about__title {
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: -14px;
+}
+.about__description {
+  font-size: 22px;
+}
+
 body {
   font-family: "Work Sans", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  line-height: 1.2;
+  line-height: 1.5;
   background-color: #fff;
   color: #2b292d;
 }
@@ -124,7 +143,7 @@ body {
 .button-white {
   font-size: 18px;
   font-weight: 700;
-  padding: 14px 28px;
+  padding: 10px 28px;
   border-radius: 2px;
   transition: opacity 0.2s ease-in;
 }
