--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,13 +1,14 @@
 @import 'variables';
 @import 'header';
 @import 'hero';
+@import 'about';
 
 
 body {
 	font-family: 'Work Sans', sans-serif;
 	font-weight: 400;
 	font-size: 18px;
-	line-height: 1.2;
+	line-height: 1.5;
 	background-color: $color-light;
 	color: $color-black;
 }
@@ -32,7 +33,7 @@ body {
 .button-white {
 	font-size: 18px;
 	font-weight: 700;
-	padding: 14px 28px;
+	padding: 10px 28px;
 	border-radius: 2px;
 	transition: opacity 0.2s ease-in;
 }
