--- a/styles/about.scss
+++ b/styles/about.scss
@@ -3,7 +3,7 @@
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		gap: 30px;
-		padding: 76px 130px;
+		padding: 76px 130px 50px;
 		background-color: $color-light-dark;
 	}
 
