--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,5 +1,7 @@
 $color-beige: #f3c6bd;
 $color-black: #2b292d;
 $color-accent: #3040c4;
+$color-blue: #3142c6;
 $color-light: #fff;
 $color-light-dark: #f4f5f7;
+$color-green: #009b4d;
