--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -5,3 +5,5 @@ $color-blue: #3142c6;
 $color-light: #fff;
 $color-light-dark: #f4f5f7;
 $color-green: #009b4d;
+$color-yellow-light: #fcf0e3;
+$color-orange: #f1592b;
