--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,85 @@
   vertical-align: middle;
 }
 
+.manage {
+  display: flex;
+  align-items: center;
+  gap: 160px;
+  background-color: #fcf0e3;
+  padding: 142px 24px 116px 192px;
+}
+.manage__image-wheel {
+  max-width: 425px;
+  height: 510px;
+  margin-bottom: 15px;
+}
+.manage__image-text {
+  font-size: 14px;
+  opacity: 0.6;
+  text-align: center;
+  display: block;
+}
+.manage__content {
+  margin-top: -38px;
+}
+.manage__content-inner {
+  padding-left: 30px;
+}
+.manage__content-decor {
+  color: #f1592b;
+  font-weight: 700;
+  margin-bottom: 24px;
+  display: block;
+  font-size: 22px;
+}
+.manage__content-title {
+  font-size: 56px;
+  font-weight: 700;
+  max-width: 462px;
+  line-height: 1;
+  margin-bottom: 30px;
+}
+.manage__content-description {
+  font-size: 24px;
+  max-width: 462px;
+  line-height: 1.4;
+}
+.manage__content-blockquote {
+  font-size: 20px;
+  background-color: #fff;
+  max-width: 520px;
+  padding: 30px 30px 28px 28px;
+  border-bottom: 4px solid #3142c6;
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+}
+.manage .content-blockquote__text {
+  display: block;
+}
+.manage .content-blockquote__info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.manage .content-blockquote__info-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.manage .content-blockquote__info-text {
+  display: flex;
+  flex-direction: column;
+}
+.manage .info-text__author {
+  font-size: 16px;
+  font-weight: 700;
+  display: flex;
+}
+.manage .info-text__position {
+  font-size: 16px;
+}
+
 body {
   font-family: "Work Sans", sans-serif;
   font-weight: 400;
