--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,7 +6,6 @@
 @import 'features';
 @import 'manage';
 
-
 body {
 	font-family: 'Work Sans', sans-serif;
 	font-weight: 400;
@@ -56,6 +55,10 @@ body {
 	opacity: 0.8;
 }
 
+.show {
+	display: block;
+}
+
 .sr-only {
 	position: absolute;
 	width: 1px;
@@ -69,4 +72,17 @@ body {
 	overflow: hidden;
 }
 
+.main {
+	position: relative;
+}
 
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(0, 0, 0, 0.7);
+	z-index: 260;
+	height: 4000px
+}
