--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,6 +5,7 @@
 @import 'partners';
 @import 'features';
 @import 'manage';
+@import 'communicate';
 
 body {
 	font-family: 'Work Sans', sans-serif;
