--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,6 +6,7 @@
 @import 'features';
 @import 'manage';
 @import 'communicate';
+@import 'audience';
 
 body {
 	font-family: 'Work Sans', sans-serif;
