--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,6 +3,7 @@ $color-black: #2b292d;
 $color-accent: #3040c4;
 $color-blue: #3142c6;
 $color-blue-light: #0189d1;
+$color-blue-birch: rgb(#00a1c6, 0.1);
 $color-light: #fff;
 $color-light-dark: #f4f5f7;
 $color-green: #009b4d;
