--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,10 @@
   filter: brightness(0);
 }
 
+.partners-copy {
+  padding: 44px 130px 72px;
+}
+
 .features__inner {
   display: flex;
   gap: 125px;
@@ -409,11 +413,16 @@
 .list-item__link {
   color: #3040c4;
   text-decoration: underline;
+  font-weight: 700;
+  transition: color 0.2s ease-in-out;
+}
+.list-item__link:hover {
+  color: #0189d1;
 }
 
 .audience__inner {
   background-color: rgba(0, 161, 198, 0.1);
-  padding: 108px 56px 110px 60px;
+  padding: 108px 56px 110px 130px;
   display: flex;
   flex-direction: column;
   gap: 110px;
@@ -449,10 +458,9 @@
 }
 
 .cards__list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 30;
+  display: grid;
+  grid-template-columns: repeat(4, 262px);
+  column-gap: 30px;
 }
 .cards__list-item {
   width: 262px;
@@ -460,6 +468,11 @@
   background-color: #fff;
   border-radius: 8px;
   padding: 22px 62px 32px;
+  transition: background-color 0.2s linear, color 0.2s linear;
+}
+.cards__list-item:hover {
+  background-color: #3142c6;
+  color: #fff;
 }
 .cards__list-item:nth-of-type(2) {
   background-color: #3142c6;
@@ -471,6 +484,7 @@
 .cards__list-link:hover {
   rotate: -5deg;
   box-shadow: 0 0 10px rgba(29, 55, 82, 0.2);
+  border-radius: 8px;
 }
 .cards__list-img {
   margin-bottom: 22px;
@@ -484,6 +498,59 @@
   text-align: center;
   font-size: 22px;
   font-weight: 700;
+}
+
+.swiper {
+  width: 100%;
+  height: 250px;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.feedback {
+  padding-bottom: 68px;
+}
+.feedback .feedback__blockquote-author {
+  display: block;
+  font-size: 16px;
+  font-weight: 700;
+}
+.feedback .feedback__blockquote-role {
+  display: block;
+  font-size: 16px;
+  color: #2b292d;
+  opacity: 0.6;
+}
+
+.feedback__title {
+  font-size: 24px;
+  font-weight: 700;
+  color: #3142c6;
+  text-align: center;
+  margin-bottom: 28px;
+}
+
+.feedback__blockquote-text {
+  font-size: 24px;
+  max-width: 750px;
+  height: 80px;
+  margin: 0 auto;
+  margin-bottom: 34px;
+  margin-top: -100px;
 }
 
 body {
@@ -564,6 +631,48 @@ body {
   background: rgba(0, 0, 0, 0.7);
   z-index: 260;
   height: 4000px;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3040c4;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #2b292d;
+}
+
+.scroll-top-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 15px;
+  font-size: 18px;
+  background-color: #3142c6;
+  opacity: 0.7;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  display: none;
+  z-index: 1000;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.scroll-top-btn:hover {
+  opacity: 0.9;
+}
+
+.fa-arrow-up {
+  font-size: 34px;
+  line-height: 1.2;
 }
 
 /*# sourceMappingURL=styles.css.map */
