--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -1,7 +1,7 @@
 .audience {
 	&__inner {
 		background-color: $color-blue-birch;
-		padding: 108px 56px 110px 60px;
+		padding: 108px 56px 110px 130px;
 		display: flex;
 		flex-direction: column;
 		gap: 110px;
@@ -40,10 +40,9 @@
 
 .cards {
 	&__list {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		gap: 30;
+		display: grid;
+		grid-template-columns: repeat(4, 262px);
+		column-gap: 30px;
 
 		&-item {
 			width: 262px;
@@ -51,6 +50,12 @@
 			background-color: $color-light;
 			border-radius: 8px;
 			padding: 22px 62px 32px;
+			transition: background-color 0.2s linear, color 0.2s linear;
+		}
+
+		&-item:hover {
+			background-color: $color-blue;
+			color: $color-light;
 		}
 
 		&-item:nth-of-type(2) {
@@ -65,6 +70,7 @@
 		&-link:hover {
 			rotate: -5deg;
 			box-shadow: 0 0 10px rgba(29, 55, 82, 0.2);
+			border-radius: 8px;
 		}
 
 		&-img {
