--- a/styles/communicate.scss
+++ b/styles/communicate.scss
@@ -42,15 +42,16 @@
 		display: flex;
 		align-items: center;
 		gap: 30px;
+
+		&-item {
+			max-width: 360px;
+		}
+
+		&-item:nth-of-type(3) {
+			max-width: 364px;
+		}
 	}
 
-	&__list-item {
-		max-width: 360px;
-	}
-
-	&__list-item:nth-of-type(3) {
-		max-width: 364px;
-	}
 }
 
 .list-item {
@@ -61,5 +62,11 @@
 	&__link {
 		color: $color-accent;
 		text-decoration: underline;
+		font-weight: 700;
+		transition: color 0.2s ease-in-out;
+	}
+
+	&__link:hover {
+		color: $color-blue-light;
 	}
 }
