--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,6 +7,7 @@
 @import 'manage';
 @import 'communicate';
 @import 'audience';
+@import 'feedback';
 
 body {
 	font-family: 'Work Sans', sans-serif;
@@ -88,3 +89,47 @@ body {
 	z-index: 260;
 	height: 4000px
 }
+
+::-webkit-scrollbar {
+	width: 12px;
+	background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: $color-accent;
+	border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: $color-black;
+}
+
+// scroll to top
+
+.scroll-top-btn {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	padding: 10px 15px;
+	font-size: 18px;
+	background-color: $color-blue;
+	opacity: 0.7;
+	color: #fff;
+	border: none;
+	border-radius: 50%;
+	width: 60px;
+	height: 60px;
+	cursor: pointer;
+	display: none;
+	z-index: 1000;
+	transition: opacity 0.2s ease-in-out;
+}
+.scroll-top-btn:hover {
+	opacity: 0.9;
+}
+
+.fa-arrow-up {
+	font-size: 34px;
+	line-height: 1.2;
+}
+
