--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -9,6 +9,8 @@ $color-light-dark: #f4f5f7;
 $color-green: #009b4d;
 $color-yellow-light: #fcf0e3;
 $color-orange: #f1592b;
+$color-grey: #2c3241;
+$color-body: #f2f2f2;
 
 @mixin title {
 	font-size: 56px;
