--- a/styles/feedback.scss
+++ b/styles/feedback.scss
@@ -20,8 +20,10 @@
 }
 
 .feedback {
+	background-color: $color-light;
 	position: relative;
 	padding-bottom: 50px;
+	border-bottom: 1px solid rgba($color-black, 0.1);
 
 	.feedback__blockquote-author {
 		display: block;
