--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,6 +9,7 @@
 @import 'audience';
 @import 'feedback';
 @import 'hiring';
+@import 'subscription';
 
 body {
 	font-family: 'Work Sans', sans-serif;
