--- a/styles/subscription.scss
+++ b/styles/subscription.scss
@@ -38,6 +38,10 @@
 		line-height: 1;
 		border-radius: 2px;
 		display: block;
+
+		&:focus {
+			outline: 1px solid $color-blue;
+		}
 	}
 
 	&__text {
