--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,6 +10,7 @@
 @import 'feedback';
 @import 'hiring';
 @import 'subscription';
+@import 'footer';
 
 body {
 	font-family: 'Work Sans', sans-serif;
