--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -32,9 +32,7 @@
 		}
 
 		&-list {
-			display: flex;
-			flex-direction: column;
-			gap: 12px;
+			@include flex-column(12px);
 		}
 
 		&-item {
