--- a/styles/header.scss
+++ b/styles/header.scss
@@ -51,6 +51,10 @@
 			cursor: pointer;
 		}
 
+		&-item:nth-of-type(3) {
+      animation: pulse-wave 1.5s infinite;
+		}
+
 		&-link {
 			color: $color-black;
 			border-bottom-width: 2px;
@@ -102,4 +106,16 @@
 	&__list-description {
 		font-size: 18px;
 	}
+}
+
+// Pulse Wave
+
+
+@keyframes pulse-wave {
+  0% {
+    box-shadow: 0 0 0 0 rgba($color-yellow-light, 0.5), 0 0 0 10px rgba($color-beige, 0.4), 0 0 0 20px rgba($color-yellow-light, 0.3), 0 0 0 30px rgba($color-beige, 0.2);
+  }
+  100% {
+    box-shadow: 0 0 0 20px rgba($color-yellow-light, 0), 0 0 0 30px rgba($color-beige, 0), 0 0 0 40px rgba($color-yellow-light, 0), 0 0 0 50px rgba($color-beige, 0);
+  }
 }
