--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,4 +1,5 @@
 .header__inner {
+	position: relative;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -151,3 +152,17 @@
 		top: 0;
 	}
 }
+
+.play-btn {
+  cursor: pointer;
+  color: $color-yellow-light;
+  font-size: 26px;
+}
+
+.header__audio {
+	position: absolute;
+	top: 52px;
+	right: 30px;
+}
+
+
