--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
   top: 0;
   left: 0;
   right: 0;
-  padding: 16px 130px;
+  padding: 10px 130px;
   background-color: rgba(243, 198, 189, 0.9);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
@@ -70,6 +70,7 @@
 .nav__list-link:hover {
   border-bottom: 3px solid #3040c4;
   border-bottom-width: 4px;
+  color: #3040c4;
 }
 .nav__list-link--active {
   font-weight: 700;
@@ -92,6 +93,10 @@
   width: 612px;
   height: 292px;
   z-index: 300;
+  transition: box-shadow 0.2s ease-in-out;
+}
+.dropdown:hover {
+  box-shadow: 0 0 10px 6px rgba(243, 198, 189, 0.8);
 }
 .dropdown__list {
   display: grid;
@@ -731,8 +736,6 @@
 
 .footer {
   background-color: #fff;
-}
-.footer__inner {
   display: flex;
   flex-direction: column;
 }
@@ -754,6 +757,10 @@
   justify-content: flex-start;
   gap: 10px;
 }
+.footer__info-apps-link:hover {
+  transition: scale 0.2s ease-in-out;
+  scale: 1.05;
+}
 .footer__links-title {
   font-size: 22px;
   font-weight: 700;
@@ -774,6 +781,7 @@
 .footer__links-link:hover {
   border-bottom: 3px solid #3040c4;
   border-bottom-width: 4px;
+  color: #3040c4;
 }
 .footer__bottom {
   display: flex;
@@ -798,6 +806,7 @@
 .footer__bottom-link:hover {
   border-bottom: 3px solid #3040c4;
   border-bottom-width: 4px;
+  color: #3040c4;
 }
 .footer__social-list {
   display: flex;
@@ -806,37 +815,13 @@
   gap: 20px;
 }
 
-body {
-  font-family: "Work Sans", sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.5;
-  background-color: #f2f2f2;
-  color: #2b292d;
-}
-
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  overflow-x: hidden;
-  max-width: 1420px;
-  padding: 0 10px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.main {
-  flex-grow: 1;
-}
-
 .button-blue,
 .button-white {
   font-size: 18px;
   font-weight: 700;
   padding: 10px 28px;
   border-radius: 2px;
-  transition: opacity 0.2s ease-in;
+  transition: opacity 0.2s ease-in, scale 0.2s ease-in-out;
 }
 
 .button-blue {
@@ -852,6 +837,7 @@ body {
 .button-blue:hover,
 .button-white:hover {
   opacity: 0.8;
+  scale: 1.05;
 }
 
 .show {
@@ -869,10 +855,6 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
-
-.main {
-  position: relative;
 }
 
 .overlay {
@@ -930,8 +912,32 @@ body {
 
 .header__audio--sticky {
   position: absolute;
-  top: 30px;
+  top: 24px;
   right: 30px;
+}
+
+body {
+  font-family: "Work Sans", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5;
+  background-color: #f2f2f2;
+  color: #2b292d;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  overflow-x: hidden;
+  max-width: 1420px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
+.main {
+  flex-grow: 1;
 }
 
 /*# sourceMappingURL=styles.css.map */
