--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,10 +1,7 @@
 .footer {
 	background-color: $color-light;
-
-	&__inner {
-		display: flex;
-		flex-direction: column;
-	}
+	display: flex;
+	flex-direction: column;
 
 	&__top {
 		display: grid;
@@ -22,6 +19,11 @@
 
 	&__info-apps {
 		@include flex-center(flex-start, 10px);
+
+		&-link:hover {
+			transition: scale .2s ease-in-out;
+			scale: 1.05;
+		}
 	}
 
 	&__links {
