--- a/styles/header.scss
+++ b/styles/header.scss
@@ -12,7 +12,7 @@
 		top: 0;
 		left: 0;
 		right: 0;
-		padding: 16px 130px;
+		padding: 10px 130px;
 		background-color: rgba($color-beige, 0.9);
 		box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 		z-index: 1000;
@@ -102,6 +102,10 @@
 	width: 612px;
 	height: 292px;
 	z-index: 300;
+	transition: box-shadow 0.2s ease-in-out;
+	&:hover {
+		box-shadow: 0 0 10px 6px rgba($color-beige, 0.8);
+	}
 
 	&__list {
 		display: grid;
@@ -154,9 +158,9 @@
 }
 
 .play-btn {
-  cursor: pointer;
-  color: $color-yellow-light;
-  font-size: 26px;
+	cursor: pointer;
+	color: $color-yellow-light;
+	font-size: 26px;
 }
 
 .header__audio {
@@ -164,5 +168,3 @@
 	top: 52px;
 	right: 30px;
 }
-
-
